# ShiroRaksha

./: .gitignore  DEPLOYMENT.md  PROJECT_DOCUMENTATION.md  README.md  render.yaml  test.py  vercel.json
forgery-backend/: ADD_MODELS.md  Dockerfile  MODEL_UPLOAD_GUIDE.md  RAILWAY_DEPLOYMENT.md  backend.py  download_model.py  pyproject.toml  requirements.txt
forgery-frontend/: package-lock.json  package.json
forgery-frontend/src/: App.css  App.js  ImageComparison.js
