[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shiro-raksha-backend"
version = "0.1.0"
description = "Medical Forgery Detection API"
requires-python = ">=3.9,<3.13"
dependencies = [
    "uvicorn==0.28.0",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python-headless==4.8.1.78",
    "tensorflow==2.14.0",
    "fastapi==0.109.0",
    "scikit-image==0.22.0",
    "pillow==10.1.0",
    "python-multipart==0.0.6",
]

[project.urls]
Homepage = "https://github.com/AnandaJoshi018/ShiroRaksha"
Repository = "https://github.com/AnandaJoshi018/ShiroRaksha.git"
